--- a/Drawing App/style.css
+++ b/Drawing App/style.css
@@ -14,15 +14,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 64vh;
   margin: 0;
 }
 
 canvas {
   background-color: #fff;
   border: 2px solid #333;
-  width: 80vw;
-  height: 100vh;
 }
 
 .toolbox {
@@ -52,6 +50,27 @@ canvas {
   border-radius: 0;
 }
 
+.toolbox > *:nth-child(5) {
+  background-color: transparent;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  height: 50px;
+  width: 50px;
+  margin: 0.25rem;
+  margin-left: auto;
+  padding: 0.25rem;
+  cursor: none;
+  white-space: nowrap;
+}
+
 .toolbox > *:last-child {
   margin-left: auto;
+  border-radius: 0%;
+  width: 100px;
+}
+
+.toolbox > *:last-child:hover {
+  color: red;
 }
