--- a/Good Cheap Fast/style.css
+++ b/Good Cheap Fast/style.css
@@ -41,6 +41,10 @@ body {
   background-color: #8e44ad;
 }
 
+.toggle:checked + .label .ball {
+  animation: slideOn 0.3s linear forwards;
+}
+
 .ball {
   background-color: #fff;
   width: 34px;
@@ -51,4 +55,30 @@ body {
   left: 3px;
   align-items: center;
   justify-content: center;
+  animation: slideOff 0.3s linear forwards;
+}
+
+@keyframes slideOn {
+  0% {
+    transform: translateX(0) scale(1);
+  }
+  50% {
+    transform: translateX(20px) scale(1.2);
+  }
+  100% {
+    transform: translateX(40px) scale(1);
+  }
+
+}
+
+@keyframes slideOff {
+  0% {
+    transform: translateX(40px) scale(1);
+  }
+  50% {
+    transform: translateX(20px) scale(1.2);
+  }
+  100% {
+    transform: translateX(0) scale(1);
+  }
 }
