--- a/Notes App/style.css
+++ b/Notes App/style.css
@@ -65,6 +65,10 @@ body {
   padding: 20px;
 }
 
+.main {
+  padding: 20px;
+}
+
 /* div with class hidden to be applied by javascript later on*/
 .hidden {
   display: none;
